# Linnaeo

./: .gitignore  CMakeLists.txt  Linnaeo-Build.pro  Linnaeo.pro  README.md  TODO  alignworker.cpp  alignworker.h  bak-workspace.ui  clustalo.cpp  clustalo.h  cmake_install.cmake  datamodel.h  folderitem.cpp  folderitem.h  linnaeo-bak.ui  linnaeo.cpp  linnaeo.h  linnaeo.ui  logging.h  main.cpp  newsequence.cpp  newsequence.h  newsequence.ui  optionspanel.cpp  optionspanel.h  optionspanel.ui  preferences.cpp  preferences.ui  searchuniprot.cpp  searchuniprot.h  searchuniprot.ui  seqeditor.cpp  seqeditor.h  seqeditor.ui  seqentrytextedit.cpp  seqentrytextedit.h  seqthread.cpp  seqthread.h  sequence.cpp  (+14 more)
docs/: index.md  on-themes.md
resources/: linnaeo.qrc
src/build-linnaeo-Desktop_Qt_6_0_0_MSVC2019_64bit-Release/: .qmake.stash
src/build-linnaeo-Desktop_Qt_6_0_0_MSVC2019_64bit-Release/release/: moc_predefs.h
src/linnaeo/: README.md  aboutdialog.ui  alignmenteditor.cpp  alignmenteditor.h  alignmenteditor.ui  alignworker.cpp  alignworker.h  clustalo.h  linnaeo.cpp  linnaeo.cpp~RF15db9f7.TMP  linnaeo.cpp~RF517951a.TMP  linnaeo.h  linnaeo.pro  linnaeo.ui  logging.cpp  logging.h  main.cpp  muscleadapter.cpp  muscleadapter.h  palette.cpp  palette.h  preferences.cpp  preferences.ui  qml.qrc  searchuniprot.cpp  searchuniprot.h  searchuniprot.ui  seqeditor.cpp  seqeditor.h  seqeditor.ui  seqentrytextedit.cpp  sequence.cpp  sequence.h  seqviewer.cpp  seqviewer.h  themes.cpp  themes.h
src/linnaeo/qml/: molviewer.qml
src/linnaeo/resources/: linnaeo.qrc
src/linnaeo/resources/themes/: fusion_dark.xml
src/linnaeo/views/: molviewer.cpp  molviewer.h  molviewer.ui
src/muscle/: muscle.pro
src/muscle/muscle/: domuscle.cpp  globals.cpp  globalswin32.cpp  html.cpp  main.cpp  msa.cpp  msa.h  muscle.h  muscleout.cpp  params.cpp  progress.cpp  refinehoriz.cpp  savebest.cpp  subfams.cpp  timing.h
